syntax = "proto3";

option go_package = "github.com/multycloud/multy/api/proto/resourcespb";
option java_multiple_files = true;
option java_package = "dev.multy.api.resources";
option java_outer_classname = "ResourcesProto";

import "api/proto/commonpb/common.proto";

package dev.multy.resources;

message CreateNetworkInterfaceRequest {
  NetworkInterfaceArgs resource = 1;
}

message ReadNetworkInterfaceRequest {
  string resource_id = 1;
}

message UpdateNetworkInterfaceRequest {
  string resource_id = 1;
  NetworkInterfaceArgs resource = 2;
}

message DeleteNetworkInterfaceRequest {
  string resource_id = 1;
}

message NetworkInterfaceArgs {
  common.ResourceCommonArgs common_parameters = 1;
  string name = 2;
  string subnet_id = 3;
  string public_ip_id = 4;
  int32 availability_zone = 5;
}

message NetworkInterfaceAwsOutputs {
  string network_interface_id = 1;
  string eip_association_id = 2;
}

message NetworkInterfaceAzureOutputs {
  string network_interface_id = 1;
}


message NetworkInterfaceResource {
  common.CommonResourceParameters common_parameters = 1;
  string name = 2;
  string subnet_id = 3;
  string public_ip_id = 4;
  int32 availability_zone = 5;

  NetworkInterfaceAwsOutputs aws_outputs = 6;
  NetworkInterfaceAzureOutputs azure_outputs = 7;
}
